src/test/deca/context/valid/personalTests/unaryminus.deca
// Test UnaryMinus


{
    int a = -5;
    float b = -a;

    println(a);
    println(b);
}
