src/test/deca/context/invalid/personalTests/FieldVoid.deca
class A{
    void a;
}

{
    A a = new A();
}